--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
   "background": {
      "scripts": [
-       "background.js"
+       "./lib/backgroundEntry.js"
      ],
      "persistent": true
    },
