--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "elemental": "^0.6.1",
     "express": "^4.14.0",
     "fantasysports": "^0.3.0",
+    "grommet": "^0.6.12",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-chrome-redux": "0.0.8",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
