--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "elemental": "^0.6.1",
-    "express": "^4.14.0",
-    "fantasysports": "^0.3.0",
+    "css-loader": "^0.25.0",
     "grommet": "^0.6.12",
+    "node-sass": "^3.10.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-chrome-redux": "0.0.8",
@@ -33,6 +32,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
