--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,8 @@
   "browser_action": {
    "default_icon": "icon.png",
    "default_popup": "popup.html"
-  }
+ },
+ "permissions": [
+      "storage"
+    ]
 }
