--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "node-sass": "^3.10.0",
     "react": "^15.3.2",
