--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-chrome-redux": "0.0.8",
     "react-dom": "^15.3.2",
+    "react-loading": "0.0.9",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
