--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-preset-react": "^6.11.1",
     "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "font-awesome": "^4.6.3",
     "node-sass": "^3.10.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
@@ -35,6 +37,7 @@
     "redux": "^3.6.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   }
 }
